* Rewrote some of the menu code to make it even tighter. A bit slower maybe, but only by milliseconds. (script.js, index.css) - Removed setOuterHTML function and replaced it with native jQuery calls. Also various minor jQuery conversions. (upgrade.php, script.js, topic.js, TEMPLATES: Admin, ManageNews, PersonalMessage, Poll, Post) - Don't attempt to use Base62 encoding with Packer. It seems to be broken in v3.1 anyway. (Subs.php) - Cancelling underscores in variable names to make sure they don't collide with other scripts. (topic.js) + A French file in SMF/Wedge wasn't completely translated. Ha! (ManageSettings.french.php)

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -486,11 +486,7 @@ li.subsection > a {
 	-webkit-border-radius: 0 9px 9px 0;
 }
 
-li.subsection > a:hover {
-	background: url(../images/menu.gif) no-repeat 98% -46px !important;
-}
-
-.css > li li:hover, li.hove, li.subsection > a:hover {
+.css > li li:hover, li.hove {
 	background-color: #ebe7e2;
 	background-color: rgba(128, 128, 128, .15);
 }
